# nsp_sandbox

./: .gitignore  pyproject.toml  readme.md  setup.cfg  setup.py
docs/: aktive_skills.csv  bedarf_count.csv  datasummary.ipynb  po_diensts.csv  skill_cor.csv  skill_exp.csv
src/: nsp_sandbox_example.ipynb  nsp_sandbox_example.lp
src/nsp_sandbox/: Block_condition.py  NSP_builder.py  NSP_greedy.py  job.py  nurse.py
src/nsp_solver/: NSP_builder.py
tests/: test_builder.py
