[metadata]
name = nsp_sandbox
version = 0.0.1
author = Niklas Wünstel
author_email = nsp@soleer.de
description = Nurse Scheduling Problem Sandbox package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soleer/nsp_sandbox
project_urls =
    Bug Tracker = https://github.com/pypa/nsp_sandbox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src